<package>
  <name>rgb2ii</name>
  <version>0.0.1</version>
  <description>
  Implements the Illumination Invariant transform based on Maddern et al. "Illumination Invariant Imaging: Applications in Robust Vision-based
Localisation, Mapping and Classification for Autonomous Vehicles" https://www.robots.ox.ac.uk/~mobile/Papers/2014ICRA_maddern.pdf
  </description>
  <maintainer email="alexander@g.sp.m.is.nagoya-u.ac.jp">Alexander</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>

</package>


